src_old/objects/ProjectServiceCertification__c.object
<CustomObject>
    <description>Relates a Certification to a Project Service. Certifications from Retailer Service Certification are added by default when a Service is added to a Project Service. Additional Certifications can be added. Project Service Certification is related to Certification and Project Service.</description>
    <fields>
        <fullName>CertificationName__c</fullName>
        <formula>Certification__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CertificationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Project Service Certifications</relationshipLabel>
        <relationshipName>Project_Service_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Project Service Certifications</relationshipLabel>
        <relationshipName>ProjectServiceCertifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Service Certification</label>
    <nameField>
        <displayFormat>PSCERT-{000000000}</displayFormat>
        <label>Project Service Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>